--- a/HogTransformation1.html
+++ b/HogTransformation1.html
@@ -25,7 +25,7 @@
             padding: 20px;
             border-radius: 16px;
             box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
-            width: 320px;
+            width: 380px;
         }
 
         h1 {
@@ -182,8 +182,8 @@
                 <label for="b3">ค่าสัมประสิทธิ์แกนกลางไม้กายสิทธิ์ (b):</label>
                 <input type="number" id="b3" />
                 <div class="choice-buttons">
-                    <button onclick="setInputValue('b3', 4.5)">4.5 ([เล็ก]ทำให้ร้าย/ตาย)</button>
-                    <button onclick="setInputValue('b3', 5.8)">5.8 ([เล็ก]ทำให้ร้าย/ตาย)</button>
+                    <button onclick="setInputValue('b3', 4.5)">4.5 ([เล็ก]ทำ ร้าย/ให้ตาย)</button>
+                    <button onclick="setInputValue('b3', 5.8)">5.8 ([ใหญ่]ทำ ร้าย/ให้ตาย)</button>
                     <button onclick="setInputValue('b3', 6.1)">6.1 ([เล็ก]ยินยอม/เก็บเกี่ยว)</button>
                     <button onclick="setInputValue('b3', 4.7)">4.7 ([ใหญ่]ยินยอม/เก็บเกี่ยว)</button>
                 </div>
@@ -463,8 +463,8 @@
                                 `สูตร: W² = [(a² + b²) / L] - f\n` +
                                 ` W² = [(${an}² + ${bn}²) / ${Ln}] - ${fn}\n` +
                                 ` W² = (${(an ** 2).toFixed(4)} + ${(bn ** 2).toFixed(4)}) / ${Ln} - ${fn}\n` +
-                                `       = ${(valW).toFixed(4)}\n` +
-                                ` W = √${(valW).toFixed(4)} = ${resultVal.toFixed(4)}`;
+                                ` W² = ${(valW).toFixed(4)}\n` +
+                                ` W  = √${(valW).toFixed(4)} = ${resultVal.toFixed(4)}`;
                             break;
 
                         case "a":
@@ -480,8 +480,8 @@
                                 ` a² = (W² + f) × L - b²\n` +
                                 ` a² = (${Wn}² + ${fn}) × ${Ln} - ${bn}²\n` +
                                 ` a² = (${(Wn ** 2).toFixed(4)} + ${fn}) × ${Ln} - ${(bn ** 2).toFixed(4)}\n` +
-                                `       = ${(valA).toFixed(4)}\n` +
-                                ` a = √${(valA).toFixed(4)} = ${resultVal.toFixed(4)}`;
+                                ` a² = ${(valA).toFixed(4)}\n` +
+                                ` a  = √${(valA).toFixed(4)} = ${resultVal.toFixed(4)}`;
                             break;
 
                         case "b":
@@ -497,8 +497,8 @@
                                 ` b: b² = (W² + f) × L - a²\n` +
                                 ` b² = (${Wn}² + ${fn}) × ${Ln} - ${an}²\n` +
                                 ` b² = (${(Wn ** 2).toFixed(4)} + ${fn}) × ${Ln} - ${(an ** 2).toFixed(4)}\n` +
-                                `       = ${(valB).toFixed(4)}\n` +
-                                ` b = √${(valB).toFixed(4)} = ${resultVal.toFixed(4)}`;
+                                ` b² = ${(valB).toFixed(4)}\n` +
+                                ` b  = √${(valB).toFixed(4)} = ${resultVal.toFixed(4)}`;
                             break;
 
                         case "L":
@@ -510,10 +510,10 @@
                             resultDiv.innerText = `ผลลัพธ์ L = ${resultVal.toFixed(4)}`;
                             workingDiv.innerText =
                                 `สูตร: W² = [(a² + b²) / L] - f\n` +
-                                ` L: L = (a² + b²) ÷ (W² + f)\n` +
+                                ` L = (a² + b²) ÷ (W² + f)\n` +
                                 ` L = (${an}² + ${bn}²) ÷ (${Wn}² + ${fn})\n` +
                                 ` L = (${(an ** 2).toFixed(4)} + ${(bn ** 2).toFixed(4)}) ÷ ${(denom).toFixed(4)}\n` +
-                                ` ${resultVal.toFixed(4)}`;
+                                ` L = ${resultVal.toFixed(4)}`;
                             break;
 
                         case "f":
@@ -526,7 +526,7 @@
                                 ` f = (a² + b²) ÷ L - W²\n` +
                                 ` f = (${an}² + ${bn}²) ÷ ${Ln} - ${Wn}²\n` +
                                 ` f = (${(an ** 2).toFixed(4)} + ${(bn ** 2).toFixed(4)}) ÷ ${Ln} - ${(Wn ** 2).toFixed(4)}\n` +
-                                ` ${resultVal.toFixed(4)}`;
+                                ` f = ${resultVal.toFixed(4)}`;
                             break;
 
                         default:
